--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -18,7 +20,7 @@
     "react-native": "0.72.7",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.6.1",
-    "react-native-safe-area-context": "^4.8.0",
+    "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
     "react-navigation-stack": "^2.10.4"
   },
