--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
