--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native": "0.72.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.14.0",
-    "react-native-reanimated": "^3.6.1",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.0.0",
