--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.5.16",
-    "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.72.7",
@@ -27,7 +28,6 @@
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.0.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-navigation-stack": "^2.10.4",
     "victory-pie": "^37.0.0"
   },
   "devDependencies": {
