--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^4.8.1",
