--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.5.16",
-    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.2",
@@ -24,6 +23,8 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-gifted-charts": "^1.4.9",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
