--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-community/masked-view": "^0.1.11",
@@ -18,6 +21,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.2",
+    "base-64": "^1.0.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-chart-kit": "^6.12.0",
@@ -25,10 +29,11 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-gifted-charts": "^1.4.9",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "^15.0.0",
+    "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3",
     "victory-pie": "^37.0.0"
   },
