--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-gifted-charts": "^1.4.9",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~2.2.0",
