--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-firebase/app": "^20.0.0",
+    "@react-native-firebase/messaging": "^20.0.0",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -31,6 +33,7 @@
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
